--- a/css/details.css
+++ b/css/details.css
@@ -7,7 +7,8 @@
 	-webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #2d4684;
 
-    margin: 60px;
+    margin-top: -30px;
+    margin-bottom: 25px;
 
 }
 
@@ -64,5 +65,40 @@
     justify-content: center;
 
     margin-top: 80px;
+
+}
+
+.details-info {
+
+    background-color: white;
+
+    padding: 30px;
+    margin: 20px 600px;
+
+    border: 4px #2d4684 solid;
+    border-radius: 40px;
+
+    text-align: center;
+
+}
+
+dl {
+
+    font-size: 20px;
+
+}
+
+dt {
+
+    color: #d53323;
+    font-weight: bold;
+
+}
+
+dd {
+
+    color: #2d4684;
+
+    margin-bottom: 20px;
 
 }
