--- a/css/cards.css
+++ b/css/cards.css
@@ -46,6 +46,7 @@
     flex-direction: column;
 
     padding: 60px 80px;
+    margin-bottom: 40px;
 
     border: 6px #2d4684 solid;
     border-radius: 40px;
@@ -65,7 +66,10 @@ h2 {
     width: 110%;
 
     margin-bottom: 50px;
+    padding: 5px;
+
     text-align: center;
+    text-transform: capitalize;
 
 }
 
